--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "y",
+  "name": "portfolio-github",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.14",
-    "astro": "^5.14.1",
-    "tailwindcss": "^4.1.14"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.11.5",
+    "tailwindcss": "^3.4.4"
   }
 }
+
