fixed private control over repo and user for stats

--- a/.github/workflows/update-readme-stats.yml
+++ b/.github/workflows/update-readme-stats.yml
@@ -1,9 +1,10 @@
 name: Aggiorna GitHub Stats
 
+# Trigger: manuale e automatico ogni giorno
 on:
+  workflow_dispatch:   # lancio manuale
   schedule:
-    - cron: '0 0 * * *'  # ogni giorno a mezzanotte
-  workflow_dispatch:     # permette di lanciare manualmente
+    - cron: '0 0 * * *'  # ogni giorno a mezzanotte (UTC)
 
 jobs:
   update-readme:
@@ -13,17 +14,16 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Aggiorna badge GitHub Stats
+    - name: Genera badge GitHub Stats
       run: |
-        # Esempio: genera badge con token in locale
-        curl -o assets/github-stats.svg "https://github-readme-stats.vercel.app/api?username=antoniotraversa&show_icons=true&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&icon_color=4CAF50&access_token=${{ secrets.GH_TOKEN }}"
-
-        curl -o assets/github-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=antoniotraversa&layout=compact&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&access_token=${{ secrets.GH_TOKEN }}"
+        mkdir -p assets
+        curl -o assets/github-stats.svg "https://github-readme-stats.vercel.app/api?username=antoniotraversa&show_icons=true&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&icon_color=4CAF50&access_token=${{ secrets.GH_TOKEN }}"
+        curl -o assets/github-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=antoniotraversa&layout=compact&locale=it&theme=gotham&bg_color=212121&title_color=F7B23B&text_color=FFFFFF&access_token=${{ secrets.GH_TOKEN }}"
 
     - name: Commit e push
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
         git add assets/github-stats.svg assets/github-langs.svg
-        git commit -m "Aggiorna badge GitHub Stats"
+        git commit -m "Aggiorna badge GitHub Stats" || echo "Nessuna modifica"
         git push
